--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -6,6 +6,7 @@
     gap: 20px;
     padding: 20px;
     position: fixed;
+    z-index: 1;
     width: 100%;
     // margin: 20px 20px 0px 0px;
     color: white;
