--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -15,7 +15,7 @@
 }
 
 .brand {
-    font-size: 30px;
+    font-size: 50px;
     font-weight: 500;
     color: white;
     z-index: 2;
@@ -29,6 +29,7 @@
 }
 
 .image:hover {
+    transition: .4s;
     opacity: 1;
 
 }
