--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -5,6 +5,7 @@
     position: relative;
     width: 100%;
     min-height: 600px;
+    transition: .3s;
 }
 
 .box>.brand {
@@ -15,12 +16,13 @@
 }
 
 .brand {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 500;
+    letter-spacing: .1rem;
     color: white;
     z-index: 2;
     position: absolute;
-    padding: 10px
+    padding: 10px;
 }
 
 .image {
