add gallery to about me page

--- a/styles/Description.module.scss
+++ b/styles/Description.module.scss
@@ -3,26 +3,35 @@
     background-color: rgb(16, 16, 16);
 }
 
-.description {
+.header {
     font-size: 50px;
     // height: auto;
-    padding: 50px 200px 20px 300px;
+    padding: 50px 200px 50px 300px;
     width: 90%;
 }
 
 .about {
-    padding: 0 0px 50px 300px;
+    padding: 0 0px 50px 200px;
     text-decoration: underline;
 }
 
 .experience {
     font-size: 20px;
     font-weight: 400;
-    padding: 100px 0px 10px 300px;
+    padding: 50px 0px 10px 300px;
+}
+
+.paragraph {
+    padding: 0px 00px 20px 300px;
+    width: 70%;
+}
+
+.spacer {
+    padding-bottom: 40px;
 }
 
 @media (max-width: 1200px) {
-    .description {
+    .header {
         font-size: 40px;
         padding-right: 100px;
         padding-left: 100px;
@@ -30,15 +39,22 @@
     .experience {
         padding-left: 100px;
     }
+    .paragraph {
+        padding-left: 100px;
+    }
 }
 
 @media (max-width: 800px) {
-    .description {
+    .header {
         font-size: 30px;
         padding-right: 100px;
         padding-left: 50px;
+        padding-bottom: 30px;
     }
     .experience {
+        padding-left: 50px;
+    }
+    .paragraph {
         padding-left: 50px;
     }
 }
