--- a/styles/ExperienceModal.module.scss
+++ b/styles/ExperienceModal.module.scss
@@ -1,4 +1,8 @@
 .modal {
+    display: flex;
+    flex-direction: row;
+    // align-items: center;
+    // justify-content: center;d
     z-index: 3;
     position: fixed;
     top: 1%;
@@ -7,35 +11,42 @@
     width: 97vw;
     height: 97vh;
     color: white;
-    opacity: .9;
+    // opacity: .9;
     border-radius: 5px;
     overflow-y: scroll;
 }
+// .cover {
+//     width: 50vw;
+// }
 
 .image {
-    width: 100%;
-    height: 50%;
+    display: flex;
+    max-width: 80%;
+    height: 30%;
+    object-fit: contain;
     overflow-y: initial;
+    border-radius: 5px;
 }
 
 .button {
     position: fixed;
     right: 2%;
     top: 2%;
-    background-color: black;
+    // background-color: black;
     color: white;
     border: 0px;
     font-size: 50px;
+    background-color: rgb(255,255,255,0)
     
 }
 
-.description {
-    overflow-y: auto;
-}
+// .description {
+//     overflow-y: auto;
+// }
 
 .info{
     overflow-y: auto;
-    height: 40vh;
+    // height: 40vh;
 }
 
 .button:hover {
