--- a/styles/HomePageHero.module.scss
+++ b/styles/HomePageHero.module.scss
@@ -6,8 +6,8 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    background-image: url("/images/FrontPhoto.jpg");
-    background-size: cover;
+    // background-image: url("/images/FrontPhoto.jpg");
+    // background-size: cover;
 }
 
 .text {
