--- a/styles/ExperienceModal.module.scss
+++ b/styles/ExperienceModal.module.scss
@@ -1,54 +1,85 @@
 .modal {
-    display: flex;
-    flex-direction: row;
-    // align-items: center;
-    // justify-content: center;d
-    z-index: 3;
-    position: fixed;
-    top: 1%;
-    left: 1%;
-    background-color: black;
-    width: 97vw;
-    height: 97vh;
-    color: white;
-    // opacity: .9;
-    border-radius: 5px;
-    overflow-y: scroll;
-}
-// .cover {
-//     width: 50vw;
-// }
-
-.image {
-    display: flex;
-    max-width: 80%;
-    height: 30%;
-    object-fit: contain;
-    overflow-y: initial;
-    border-radius: 5px;
+	z-index: 3;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: black;
+	min-width: 500px;
+	width: 50%;
+	color: white;
+	// opacity: .9;
+	border: 1px solid white;
+	box-shadow: 5px 5px aqua;
+	overflow-y: auto;
 }
 
 .button {
-    position: fixed;
-    right: 2%;
-    top: 2%;
-    // background-color: black;
-    color: white;
-    border: 0px;
-    font-size: 50px;
-    background-color: rgb(255,255,255,0)
-    
+	position: absolute;
+	right: 1%;
+	top: 2px;;
+	// background-color: black;
+	color: white;
+	border: 0px;
+	font-size: 50px;
+	background-color: transparent;
 }
 
-// .description {
-//     overflow-y: auto;
-// }
+.modalImage {
+	margin-top: 40px;
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	border-radius: 5px;
+}
 
-.info{
-    overflow-y: auto;
-    // height: 40vh;
+.contentContainer {
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.infoContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 10px;
+}
+
+.infoRow {
+	display: flex;
+	gap: 10px;
+}
+
+.infoHeader {
+	font-size: 17px;
+	font-weight: 600;
+}
+
+.toolList {
+	 display: flex;
+	 flex-wrap: wrap;
+	 gap: 10px;
+}
+
+.toolListItem {
+	padding: 3px 8px;
+	border: 1px solid white;
+	box-shadow: 3px 3px aquamarine;
+}
+
+.description {
+	font-weight: 300;
+	margin-top: 20px;
+}
+
+.info {
+	overflow-y: auto;
+	// height: 40vh;
 }
 
 .button:hover {
-    color:rgb(222, 222, 222);
+	color: rgb(222, 222, 222);
 }
