--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -15,36 +15,58 @@
     visibility: visible;
 }
 
+.brandContainer {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    padding-bottom: 25px;
+}
+
 .brand {
     font-size: 40px;
     font-weight: 500;
     letter-spacing: .1rem;
     color: white;
-    z-index: 2;
-    position: absolute;
-    padding: 10px;
     text-align: center;
+    // filter: drop-shadow(2px 2px black);
+    // z-index: 2;
+    // position: absolute;
+    // padding: 10px;
+    // text-align: center;
+}
+
+.brandBtn {
+    width: fit-content;
+    border: 1px solid white;
+    color: white;
+    background-color: black;
+    padding: 5px 10px;
+    box-shadow: 2px 2px white;
+    margin-top: 10px;
 }
 
 .image {
-    position: absolute;
-    opacity: .85;
+    // position: absolute;
+    // opacity: .85;
 }
 
-.image:hover {
-    transition: .4s;
-    opacity: 1;
+// .image:hover {
+//     transition: .4s;
+//     opacity: 1;
 
-}
+// }
 
 @media (max-width: 700px) {
     .box {
         min-height: 300px;
     }
  
-    .box > .brand {
-        visibility: visible;
-    }
+    // .box > .brand {
+    //     visibility: visible;
+    // }
     
     .brand {
         font-size: 20px;
