update background color; add variable background color

--- a/styles/Description.module.scss
+++ b/styles/Description.module.scss
@@ -1,6 +1,6 @@
 .container {
-    color: white;
-    background-color: rgb(16, 16, 16);
+    // color: white;
+    // background-color: rgb(16, 16, 16);
 }
 
 .header {
