--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,13 +10,13 @@
 //     background-color: #ebf2f5;
 // }
 .main {
-    background-color: rgb(16, 16, 16);
+    // background-color: rgb(16, 16, 16);
 }
 .background {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(16, 16, 16);
+    // color: rgb(16, 16, 16);
 }
 
 .experience {
