--- a/styles/ExperienceModal.module.scss
+++ b/styles/ExperienceModal.module.scss
@@ -4,10 +4,10 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: black;
+	// background-color: black;
 	min-width: 500px;
 	width: 50%;
-	color: white;
+	// color: white;
 	// opacity: .9;
 	border: 1px solid white;
 	box-shadow: 5px 5px aqua;
