--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
-    background-color: rgb(16, 16, 16);
+    // color: white;
+    // background-color: rgb(16, 16, 16);
     height: 75px;
     font-size: 1em;
     font-weight: 300;
