--- a/styles/HeroBanner.module.scss
+++ b/styles/HeroBanner.module.scss
@@ -13,7 +13,7 @@
         padding: 40px;
         min-width: 300px;
         max-width: 40%;
-        background-color: rgba(255, 255, 255, 0.7);
+        // background-color: rgba(255, 255, 255, 0.7);
         position: relative;
         left: 100px;
         
