--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 @import "./Home.module.scss";
 @import "./Button.module.scss";
+@import "_variables.scss";
 
 html,
 body {
@@ -11,6 +12,7 @@ body {
   overflow-x: hidden; 
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: $background-color;
 }
 
 a {
