--- a/styles/ExperienceModal.module.scss
+++ b/styles/ExperienceModal.module.scss
@@ -1,3 +1,5 @@
+@import "_variables.scss";
+
 .modal {
 	z-index: 3;
 	position: absolute;
@@ -9,9 +11,10 @@
 	width: 50%;
 	// color: white;
 	// opacity: .9;
-	border: 1px solid white;
-	box-shadow: 5px 5px aqua;
+	border: 1px solid black;
+	box-shadow: 5px 5px black;
 	overflow-y: auto;
+	background-color: $background-color;
 }
 
 .button {
@@ -66,8 +69,8 @@
 
 .toolListItem {
 	padding: 3px 8px;
-	border: 1px solid white;
-	box-shadow: 3px 3px aquamarine;
+	border: 1px solid black;
+	box-shadow: 3px 3px black;
 }
 
 .description {
