--- a/styles/Work.module.scss
+++ b/styles/Work.module.scss
@@ -41,8 +41,8 @@
 
 .workTextContainer {
   h2 {
-    margin-top: none;
-    margin-bottom: none;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 }
 
@@ -55,5 +55,5 @@
 }
 
 .workContent {
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
