create accordion component

--- a/styles/Work.module.scss
+++ b/styles/Work.module.scss
@@ -26,6 +26,7 @@
   margin-left: 20vw;
   justify-content: space-between;
   padding: 20px;
+  cursor: pointer;
 
   img {
     margin-right: 20px;
@@ -33,7 +34,7 @@
 }
 
 .workHeaderContainer:hover {
-  h2, img {
+  h2, img, p, small {
     transition: .15s;
     opacity: .5;
   }
