--- a/styles/Work.module.scss
+++ b/styles/Work.module.scss
@@ -35,7 +35,7 @@
 
 .workHeaderContainer:hover {
   h2, img, p, small {
-    transition: .15s;
+    transition: .15s ease-in-out;
     opacity: .5;
   }
 }
